--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title1</title>
+    <title>Title2</title>
+    <title>Title3</title>
+
 </head>
 <body>
 
