--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title1</title>
+    <title>Title1</title>
+    <title>Title1</title>
+    <title>Title1</title>
+    <title>Title1</title>
+
 </head>
 <body>
 
